last word error not showing bug

--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ html {
   margin-top: 3%;
   transform: translateY(-7%);
   height: 100%;
-  width: 39%;
+  width: 40%;
   text-align: center;
   display: inline-block;
 }
